Enabled hot-reload to work for local development of conzept.

--- a/conf/supervisord.conf
+++ b/conf/supervisord.conf
@@ -69,3 +69,9 @@ stdout_logfile_maxbytes=0
 stderr_logfile_maxbytes=0
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
+
+[program:watcher]
+command=/bin/sh -c "while inotifywait -e modify,create,delete -r /var/www/html/app; do nginx -s reload; done"
+stdout_logfile=/var/log/inotify_stdout.log
+stderr_logfile=/var/log/inotify_stderr.log
+autorestart=true
