iAdded the various additional commands to run at startup for local dev work.
Built the container using: scripts/nocache_local_build_update.sh during test iterations.

Tested by adding a new file e.g. app/wikipedia/hotswaptest.html here while conzept is
running in Docker and check it's served by conzept when I browse to that page in my web browser.
    https://localhost/app/wikipedia/hotswaptest.html

The page's content was served. Also tested by adding a php file to app/explore2

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,7 +43,10 @@ services:
     command: >
       /bin/bash -c "
       cd /var/www/html/app/explore2 && npm i && sh build.sh &&
-      cd /var/www/html/app/explore2/libs/lc && sh build.sh"
+      cd /var/www/html/app/explore2/libs/lc && sh build.sh &&
+      mkdir -p /var/www/html/app/explore2/assets/json/covers/ &&
+      cd /var/www/html/app/explore2/tools && sh ./get_previous_month_covers.sh &&
+      exec /bin/bash -c 'source /var/www/html/settings.conf && /usr/bin/supervisord -n -c /etc/supervisor/supervisord.conf'"
 
 volumes:
   sslvolume:
